# dask-image

./: .appveyor.yml  .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  environment_ci.yml  environment_doc.yml  environment_dpl.yml  pyproject.toml  pytest.ini  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  travis_pypi_setup.py  versioneer.py
.appveyor_support/: create_env.bat  install_miniconda.bat
.appveyor_support/environments/: tst_py27.yml  tst_py35.yml  tst_py36.yml  tst_py37.yml
.circleci/: config.yml  create_env.sh  fast_finish_ci_pr_build.sh  install_miniconda.sh
.circleci/environments/: tst_py27.yml  tst_py35.yml  tst_py36.yml  tst_py37.yml  tst_py38.yml
.gen_ci_support/: ff_ci_pr_build.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  make_release.yml  python-publish.yml  test.yml  test_and_deploy.yml  testing.yml
.travis_support/: create_env.sh  install_miniconda.sh
.travis_support/environments/: dpl.yml  tst_py27.yml  tst_py35.yml  tst_py36.yml  tst_py37.yml
continuous_integration/: environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml  environment-3.14.yml  environment-3.6.yml  environment-3.7.yml  environment-3.8-dev.yml  environment-3.8.yml  environment-3.9.yml  environment-doc.yml  environment-latest.yml
continuous_integration/gpuci/: axis.yaml  build.sh
dask_image/: __init__.py  _pycompat.py  _version.py  imread.py
dask_image/dispatch/: _dispatch_ndfilters.py  _dispatch_ndinterp.py  _dispatch_ndmorph.py  _dispatcher.py  _utils.py
dask_image/feature/: __init__.py  template.py  test.py
dask_image/imread/: __init__.py  _utils.py
dask_image/ndfilters/: __init__.py  _conv.py  _diff.py  _edge.py  _gaussian.py  _generic.py  _order.py  _smooth.py  _threshold.py  _thresholding.py  _utils.py
dask_image/ndfourier/: __init__.py  _utils.py
dask_image/ndinterp/: __init__.py  _affine_transform.py  _map_overlap.py  _rotate.py  _spline_filters.py  _utils.py
dask_image/ndmeasure/: __init__.py  _compat.py  _pycompat.py  _utils.py
dask_image/ndmeasure/_utils/: __init__.py  _find_objects.py  _label.py
dask_image/ndmorph/: __init__.py  _ops.py  _utils.py
dask_image/signal/: __init__.py  _convolve.py
dask_image/skexposure/: __init__.py  histogram_matching.py
dask_image/utils/: __init__.py  _dispatcher.py
dask_imread/: __init__.py  _version.py
dask_ndfilters/: __init__.py  _conv.py  _core.py  _diff.py  _edge.py  _gaussian.py  _generic.py  _order.py  _smooth.py  _utils.py  _version.py  conv.py  core.py  diff.py  edge.py  gaussian.py  generic.py  order.py  smooth.py
dask_ndfourier/: __init__.py  _compat.py  _utils.py  _version.py  core.py
dask_ndmeasure/: __init__.py  _compat.py  _test_utils.py  _utils.py  _version.py
dask_ndmorph/: __init__.py  _ops.py  _utils.py  _version.py
docs/: Makefile  api.rst  comparision.rst  conf.py  coverage.rst  development.rst  index.rst  installation.rst  make.bat  quickstart.rst  usage.rst
docs/release/: generate_release_notes.py  release_0_1_0.md  release_0_1_1.md  release_0_1_2.md  release_0_2_0.md  release_0_3_0.md  release_guide.rst  release_procedure.md
requirements/: default.txt  development.txt  release.txt  test.txt
tests/: test__compat.py  test__conv.py  test__diff.py  test__edge.py  test__gaussian.py  test__generic.py  test__ops.py  test__order.py  test__pycompat.py  test__smooth.py  test__test_utils.py  test__utils.py  test_conv.py  test_core.py  test_dask_image.py  test_dask_imread.py  test_dask_ndfilters.py  test_dask_ndmorph.py  test_diff.py  test_edge.py  test_gaussian.py  test_generic.py  test_order.py  test_smooth.py
tests/test_dask_image/: test__pycompat.py
tests/test_dask_image/test_feature/: test_template.py
tests/test_dask_image/test_imread/: test_core.py  test_cupy_imread.py
tests/test_dask_image/test_ndfilters/: test__conv.py  test__diff.py  test__edge.py  test__gaussian.py  test__generic.py  test__order.py  test__smooth.py  test__threshold.py  test__thresholding.py  test__utils.py  test_cupy_ndfilters.py  test_cupy_threshold.py
tests/test_dask_image/test_ndfourier/: test__compat.py  test__utils.py  test_core.py
tests/test_dask_image/test_ndinterp/: test_affine_transformation.py  test_map_coordinates.py  test_rotate.py  test_spline_filter.py
tests/test_dask_image/test_ndmeasure/: test__compat.py  test__pycompat.py  test__utils.py  test_core.py  test_find_objects.py  test_find_objects_no_dataframe.py
tests/test_dask_image/test_ndmorph/: test__ops.py  test__utils.py  test_cupy_ndmorph.py  test_ndmorph.py
tests/test_dask_image/test_signal/: test__convolve.py
tests/test_dask_image/test_skexposure/: test_histogram_matching.py
