[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dask-image"
authors = [{name="dask-image contributors. see https://github.com/dask/dask-image/graphs/contributors"}]  # noqa: E501
description = "Distributed image processing"
keywords = ["dask-image", "dask", "image"]
readme = "README.rst"
license = { text = "BSD-3-Clause" }
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dask[array,dataframe] >=2024.4.1",
    "numpy >=1.18",
    "scipy >=1.7.0",
    "pandas >=2.0.0",
    "pims >=0.4.1",
    "tifffile >=2018.10.18",
]

[project.optional-dependencies]
test = [
    "build >=1.2.1",
    "coverage >=7.2.1",
    "flake8 >=6.0.0",
    "Flake8-pyproject",
    "pytest >=7.2.2",
    "pytest-cov >=4.0.0",
    "pytest-flake8 >=1.1.1",
    "pytest-timeout >=2.3.1",
    "twine >=3.1.1",
]
gpu = [
    "cupy >=9.0.0",
]

[project.urls]
"Homepage" = "https://image.dask.org"
"Issue Tracker" = "https://github.com/dask/dask-image/issues"
"Source Code" = "https://github.com/dask/dask-image"

[tool.setuptools_scm]
version_file = "dask_image/_version.py"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE.txt",
]

[tool.setuptools.packages.find]
exclude = [
    "tests*",
]

[tool.pytest]
addopts = "--flake8"
markers = "cupy"
